<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_Cyl_Diagnosis" Id="{6e877571-6d85-0913-3d07-ec8effca410a}">
    <Declaration><![CDATA[TYPE ST_Cyl_Diagnosis :
STRUCT
	bError : BOOL;
	eDiag	 	: 	E_Diag;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>